assignment_2/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' '}' ';'
    5      | CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' '}' ';'
    8      | error ';'

    9 feature_list: feature ';'
   10             | feature_list feature ';'

   11 feature: OBJECTID ':' TYPEID
   12        | OBJECTID ':' TYPEID ASSIGN expr
   13        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   14        | error

   15 formal_list: /* empty */
   16            | formal
   17            | formal_list ',' formal

   18 formal: OBJECTID ':' TYPEID

   19 expr: OBJECTID ASSIGN expr
   20     | expr '@' TYPEID '.' OBJECTID '(' argument_list ')'
   21     | expr '.' OBJECTID '(' argument_list ')'
   22     | OBJECTID '(' argument_list ')'
   23     | IF expr THEN expr ELSE expr FI
   24     | WHILE expr LOOP expr POOL
   25     | '{' expr_list '}'
   26     | LET OBJECTID ':' TYPEID let_init let_body
   27     | LET error let_body
   28     | CASE expr OF case_list ESAC
   29     | NEW TYPEID
   30     | ISVOID expr
   31     | expr '+' expr
   32     | expr '-' expr
   33     | expr '*' expr
   34     | expr '/' expr
   35     | '~' expr
   36     | expr LE expr
   37     | expr '<' expr
   38     | expr '=' expr
   39     | NOT expr
   40     | '(' expr ')'
   41     | OBJECTID
   42     | INT_CONST
   43     | STR_CONST
   44     | BOOL_CONST

   45 let_body: IN expr
   46         | ',' OBJECTID ':' TYPEID let_init let_body
   47         | ',' error let_body

   48 let_init: /* empty */
   49         | ASSIGN expr

   50 expr_list: expr ';'
   51          | expr_list expr ';'
   52          | error ';'

   53 argument_list: /* empty */
   54              | expr
   55              | argument_list ',' expr

   56 case_list: case
   57          | case_list case

   58 case: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 20 21 22 40
')' (41) 13 20 21 22 40
'*' (42) 33
'+' (43) 31
',' (44) 17 46 47 55
'-' (45) 32
'.' (46) 20 21
'/' (47) 34
':' (58) 11 12 13 18 26 46 58
';' (59) 4 5 6 7 8 9 10 50 51 52 58
'<' (60) 37
'=' (61) 38
'@' (64) 20
'{' (123) 4 5 6 7 13 25
'}' (125) 4 5 6 7 13 25
'~' (126) 35
error (256) 8 14 27 47 52
CLASS (258) 4 5 6 7
ELSE (259) 23
FI (260) 23
IF (261) 23
IN (262) 45
INHERITS (263) 6 7
LET (264) 26 27
LOOP (265) 24
POOL (266) 24
THEN (267) 23
WHILE (268) 24
CASE (269) 28
ESAC (270) 28
OF (271) 28
DARROW (272) 58
NEW (273) 29
ISVOID (274) 30
STR_CONST (275) 43
INT_CONST (276) 42
BOOL_CONST (277) 44
TYPEID (278) 4 5 6 7 11 12 13 18 20 26 29 46 58
OBJECTID (279) 11 12 13 18 19 20 21 22 26 41 46 58
ASSIGN (280) 12 19 49
NOT (281) 39
LE (282) 36
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6 7 8, on right: 2 3
feature_list (49)
    on left: 9 10, on right: 5 6 10
feature (50)
    on left: 11 12 13 14, on right: 9 10
formal_list (51)
    on left: 15 16 17, on right: 13 17
formal (52)
    on left: 18, on right: 16 17
expr (53)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43 44, on right: 12 13 19 20 21 23 24 28 30 31
    32 33 34 35 36 37 38 39 40 45 49 50 51 54 55 58
let_body (54)
    on left: 45 46 47, on right: 26 27 46 47
let_init (55)
    on left: 48 49, on right: 26 46
expr_list (56)
    on left: 50 51 52, on right: 25 51
argument_list (57)
    on left: 53 54 55, on right: 20 21 22 55
case_list (58)
    on left: 56 57, on right: 28 57
case (59)
    on left: 58, on right: 56 57


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    8 class: error . ';'

    ';'  shift, and go to state 6


state 2

    4 class: CLASS . TYPEID '{' '}' ';'
    5      | CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS . TYPEID INHERITS TYPEID '{' '}' ';'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


state 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 6

    8 class: error ';' .

    $default  reduce using rule 8 (class)


state 7

    4 class: CLASS TYPEID . '{' '}' ';'
    5      | CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID . INHERITS TYPEID '{' '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 10

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID INHERITS . TYPEID '{' '}' ';'

    TYPEID  shift, and go to state 12


state 11

    4 class: CLASS TYPEID '{' . '}' ';'
    5      | CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 15

    feature_list  go to state 16
    feature       go to state 17


state 12

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID . '{' '}' ';'

    '{'  shift, and go to state 18


state 13

   14 feature: error .

    $default  reduce using rule 14 (feature)


state 14

   11 feature: OBJECTID . ':' TYPEID
   12        | OBJECTID . ':' TYPEID ASSIGN expr
   13        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 19
    '('  shift, and go to state 20


state 15

    4 class: CLASS TYPEID '{' '}' . ';'

    ';'  shift, and go to state 21


state 16

    5 class: CLASS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 22

    feature  go to state 23


state 17

    9 feature_list: feature . ';'

    ';'  shift, and go to state 24


state 18

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' . '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 25

    feature_list  go to state 26
    feature       go to state 17


state 19

   11 feature: OBJECTID ':' . TYPEID
   12        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 27


state 20

   13 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 28

    $default  reduce using rule 15 (formal_list)

    formal_list  go to state 29
    formal       go to state 30


state 21

    4 class: CLASS TYPEID '{' '}' ';' .

    $default  reduce using rule 4 (class)


state 22

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 31


state 23

   10 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 32


state 24

    9 feature_list: feature ';' .

    $default  reduce using rule 9 (feature_list)


state 25

    7 class: CLASS TYPEID INHERITS TYPEID '{' '}' . ';'

    ';'  shift, and go to state 33


state 26

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 34

    feature  go to state 23


state 27

   11 feature: OBJECTID ':' TYPEID .
   12        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 35

    $default  reduce using rule 11 (feature)


state 28

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 36


state 29

   13 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   17 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 37
    ','  shift, and go to state 38


state 30

   16 formal_list: formal .

    $default  reduce using rule 16 (formal_list)


state 31

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 32

   10 feature_list: feature_list feature ';' .

    $default  reduce using rule 10 (feature_list)


state 33

    7 class: CLASS TYPEID INHERITS TYPEID '{' '}' ';' .

    $default  reduce using rule 7 (class)


state 34

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 39


state 35

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 54


state 36

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 55


state 37

   13 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 56


state 38

   17 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 28

    formal  go to state 57


state 39

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


state 40

   23 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 58


state 41

   26 expr: LET . OBJECTID ':' TYPEID let_init let_body
   27     | LET . error let_body

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60


state 42

   24 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 61


state 43

   28 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 62


state 44

   29 expr: NEW . TYPEID

    TYPEID  shift, and go to state 63


state 45

   30 expr: ISVOID . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 64


state 46

   43 expr: STR_CONST .

    $default  reduce using rule 43 (expr)


state 47

   42 expr: INT_CONST .

    $default  reduce using rule 42 (expr)


state 48

   44 expr: BOOL_CONST .

    $default  reduce using rule 44 (expr)


state 49

   19 expr: OBJECTID . ASSIGN expr
   22     | OBJECTID . '(' argument_list ')'
   41     | OBJECTID .

    ASSIGN  shift, and go to state 65
    '('     shift, and go to state 66

    $default  reduce using rule 41 (expr)


state 50

   39 expr: NOT . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 67


state 51

   35 expr: '~' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 68


state 52

   25 expr: '{' . expr_list '}'

    error       shift, and go to state 69
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr       go to state 70
    expr_list  go to state 71


state 53

   40 expr: '(' . expr ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 72


state 54

   12 feature: OBJECTID ':' TYPEID ASSIGN expr .
   20 expr: expr . '@' TYPEID '.' OBJECTID '(' argument_list ')'
   21     | expr . '.' OBJECTID '(' argument_list ')'
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . LE expr
   37     | expr . '<' expr
   38     | expr . '=' expr

    LE   shift, and go to state 73
    '='  shift, and go to state 74
    '<'  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 12 (feature)


state 55

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


state 56

   13 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 82


state 57

   17 formal_list: formal_list ',' formal .

    $default  reduce using rule 17 (formal_list)


state 58

   20 expr: expr . '@' TYPEID '.' OBJECTID '(' argument_list ')'
   21     | expr . '.' OBJECTID '(' argument_list ')'
   23     | IF expr . THEN expr ELSE expr FI
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . LE expr
   37     | expr . '<' expr
   38     | expr . '=' expr

    THEN  shift, and go to state 83
    LE    shift, and go to state 73
    '='   shift, and go to state 74
    '<'   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


state 59

   27 expr: LET error . let_body

    IN   shift, and go to state 84
    ','  shift, and go to state 85

    let_body  go to state 86


state 60

   26 expr: LET OBJECTID . ':' TYPEID let_init let_body

    ':'  shift, and go to state 87


state 61

   20 expr: expr . '@' TYPEID '.' OBJECTID '(' argument_list ')'
   21     | expr . '.' OBJECTID '(' argument_list ')'
   24     | WHILE expr . LOOP expr POOL
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . LE expr
   37     | expr . '<' expr
   38     | expr . '=' expr

    LOOP  shift, and go to state 88
    LE    shift, and go to state 73
    '='   shift, and go to state 74
    '<'   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


state 62

   20 expr: expr . '@' TYPEID '.' OBJECTID '(' argument_list ')'
   21     | expr . '.' OBJECTID '(' argument_list ')'
   28     | CASE expr . OF case_list ESAC
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . LE expr
   37     | expr . '<' expr
   38     | expr . '=' expr

    OF   shift, and go to state 89
    LE   shift, and go to state 73
    '='  shift, and go to state 74
    '<'  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81


state 63

   29 expr: NEW TYPEID .

    $default  reduce using rule 29 (expr)


state 64

   20 expr: expr . '@' TYPEID '.' OBJECTID '(' argument_list ')'
   21     | expr . '.' OBJECTID '(' argument_list ')'
   30     | ISVOID expr .
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . LE expr
   37     | expr . '<' expr
   38     | expr . '=' expr

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 30 (expr)


state 65

   19 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 90


state 66

   22 expr: OBJECTID '(' . argument_list ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    $default  reduce using rule 53 (argument_list)

    expr           go to state 91
    argument_list  go to state 92


state 67

   20 expr: expr . '@' TYPEID '.' OBJECTID '(' argument_list ')'
   21     | expr . '.' OBJECTID '(' argument_list ')'
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . LE expr
   37     | expr . '<' expr
   38     | expr . '=' expr
   39     | NOT expr .

    LE   shift, and go to state 73
    '='  shift, and go to state 74
    '<'  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 39 (expr)


state 68

   20 expr: expr . '@' TYPEID '.' OBJECTID '(' argument_list ')'
   21     | expr . '.' OBJECTID '(' argument_list ')'
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | '~' expr .
   36     | expr . LE expr
   37     | expr . '<' expr
   38     | expr . '=' expr

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 35 (expr)


state 69

   52 expr_list: error . ';'

    ';'  shift, and go to state 93


state 70
